# MediaProject

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tuyasmart/media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: EGLUtils.h  FFmpegMusic.cpp  native-lib.cpp
app/src/main/cpp/include/: FFmpegMusic.h
app/src/main/java/com/tuyasmart/media/: FFmpegMedia.java  MainActivity.java
app/src/main/java/com/tuyasmart/media/view/: TuyaVideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tuyasmart/media/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
